# cv-maker

./: .gitignore  Cargo.toml  Dockerfile  askama.toml  build.rs  compose.yaml
assets/: cv.css  form.css  htmx.js  styles.css
src/: cv.rs  filters.rs  gradient.rs  main.rs  pages.rs
src/components/: contact.rs  experience.rs  interest.rs  me.rs  mod.rs  skill.rs
src/css/: cv.css  form.css  reset.css
src/hexgrid/: hex.rs  mod.rs
templates/: base.html  cv.html  form.html  form_page.html  hex.html  hexgrid.html  macros.html
templates/components/: contact.html  education_list.html  experience_list.html  interest_list.html  me.html  skill_list.html
