[package]
name = "cv_spa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["form", "multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
tower-http = { version = "0.5.2", features = ["fs"] }
regex = "1.10.4"
once_cell = "1.19.0"
serde_qs = { version = "0.13.0", features = ["axum"] }
serde_yaml = "0.9.34"
